--- a/vscode/pride/bi-pride/package.json
+++ b/vscode/pride/bi-pride/package.json
@@ -2,6 +2,7 @@
   "name": "bi-pride",
   "displayName": "bi-pride",
   "description": "Bi Pride",
+  "publisher": "almzau",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.82.0"
